--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "test": "ng test"
   },
   "private": true,
+  "imports": {
+    "#styles.css": "./src/styles/styles.css"
+  },
   "dependencies": {
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
@@ -42,6 +45,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-css-order": "^2.1.2",
+    "prettier-plugin-organize-attributes": "^1.0.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "~5.7.2"
   }
