--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@tailwindcss/postcss": "^4.1.7",
+    "clsx": "^2.1.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.7",
     "tslib": "^2.3.0",
