feat(backend): seed workspaces

--- a/backend/src/Api/appsettings.json
+++ b/backend/src/Api/appsettings.json
@@ -11,5 +11,35 @@
   },
   "Cors": {
     "Origins": ["http://localhost:4200"]
+  },
+  "Seed": {
+    "Workspaces": [
+      {
+        "Name": "Open space",
+        "Description": "A vibrant shared area perfect for freelancers or small teams who enjoy a collaborative atmosphere. Choose any available desk and get to work with flexibility and ease.",
+        "DeskCount": 24,
+        "RoomConfigurations": []
+      },
+      {
+        "Name": "Private rooms",
+        "Description": "Ideal for focused work, video calls, or small team huddles. These fully enclosed rooms offer privacy and come in a variety of sizes to fit your needs.",
+        "DeskCount": 0,
+        "RoomConfigurations": [
+          { "Count": 7, "Capacity": 1 },
+          { "Count": 5, "Capacity": 2 },
+          { "Count": 3, "Capacity": 5 },
+          { "Count": 1, "Capacity": 10 }
+        ]
+      },
+      {
+        "Name": "Meeting rooms",
+        "Description": "Designed for productive meetings, workshops, or client presentations. Equipped with screens, whiteboards, and comfortable seating to keep your sessions running smoothly.",
+        "DeskCount": 0,
+        "RoomConfigurations": [
+          { "Count": 4, "Capacity": 10 },
+          { "Count": 1, "Capacity": 20 }
+        ]
+      }
+    ]
   }
 }
