feat(backend): workspace amenities

--- a/backend/src/Api/appsettings.json
+++ b/backend/src/Api/appsettings.json
@@ -17,12 +17,14 @@
       {
         "Name": "Open space",
         "Description": "A vibrant shared area perfect for freelancers or small teams who enjoy a collaborative atmosphere. Choose any available desk and get to work with flexibility and ease.",
+        "Amenities": ["Air conditioning", "Gamepad", "Wi-Fi", "Coffee"],
         "DeskCount": 24,
         "RoomConfigurations": []
       },
       {
         "Name": "Private rooms",
         "Description": "Ideal for focused work, video calls, or small team huddles. These fully enclosed rooms offer privacy and come in a variety of sizes to fit your needs.",
+        "Amenities": ["Wi-Fi", "Air conditioning", "Headphones"],
         "DeskCount": 0,
         "RoomConfigurations": [
           { "Count": 7, "Capacity": 1 },
@@ -34,6 +36,7 @@
       {
         "Name": "Meeting rooms",
         "Description": "Designed for productive meetings, workshops, or client presentations. Equipped with screens, whiteboards, and comfortable seating to keep your sessions running smoothly.",
+        "Amenities": ["Wi-Fi", "Air conditioning", "Headphones", "Microphone"],
         "DeskCount": 0,
         "RoomConfigurations": [
           { "Count": 4, "Capacity": 10 },
