--- a/backend/src/Api/appsettings.json
+++ b/backend/src/Api/appsettings.json
@@ -17,6 +17,12 @@
       {
         "Name": "Open space",
         "Description": "A vibrant shared area perfect for freelancers or small teams who enjoy a collaborative atmosphere. Choose any available desk and get to work with flexibility and ease.",
+        "PhotoUrls": [
+          "photos/open-space-1.png",
+          "photos/open-space-2.png",
+          "photos/open-space-3.png",
+          "photos/open-space-4.png"
+        ],
         "Amenities": ["Air conditioning", "Gamepad", "Wi-Fi", "Coffee"],
         "DeskCount": 24,
         "RoomConfigurations": []
@@ -24,11 +30,17 @@
       {
         "Name": "Private rooms",
         "Description": "Ideal for focused work, video calls, or small team huddles. These fully enclosed rooms offer privacy and come in a variety of sizes to fit your needs.",
+        "PhotoUrls": [
+          "photos/private-rooms-1.png",
+          "photos/private-rooms-2.png",
+          "photos/private-rooms-3.png",
+          "photos/private-rooms-4.png"
+        ],
         "Amenities": ["Wi-Fi", "Air conditioning", "Headphones"],
         "DeskCount": 0,
         "RoomConfigurations": [
           { "Count": 7, "Capacity": 1 },
-          { "Count": 5, "Capacity": 2 },
+          { "Count": 4, "Capacity": 2 },
           { "Count": 3, "Capacity": 5 },
           { "Count": 1, "Capacity": 10 }
         ]
@@ -36,6 +48,12 @@
       {
         "Name": "Meeting rooms",
         "Description": "Designed for productive meetings, workshops, or client presentations. Equipped with screens, whiteboards, and comfortable seating to keep your sessions running smoothly.",
+        "PhotoUrls": [
+          "photos/meeting-rooms-1.png",
+          "photos/meeting-rooms-2.png",
+          "photos/meeting-rooms-3.png",
+          "photos/meeting-rooms-4.png"
+        ],
         "Amenities": ["Wi-Fi", "Air conditioning", "Headphones", "Microphone"],
         "DeskCount": 0,
         "RoomConfigurations": [
