feat: book workspace

--- a/backend/src/Api/appsettings.json
+++ b/backend/src/Api/appsettings.json
@@ -17,6 +17,7 @@
       {
         "Name": "Open space",
         "Description": "A vibrant shared area perfect for freelancers or small teams who enjoy a collaborative atmosphere. Choose any available desk and get to work with flexibility and ease.",
+        "MaxBookingDurationInDays": 30,
         "PhotoUrls": [
           "photos/open-space-1.png",
           "photos/open-space-2.png",
@@ -30,6 +31,7 @@
       {
         "Name": "Private rooms",
         "Description": "Ideal for focused work, video calls, or small team huddles. These fully enclosed rooms offer privacy and come in a variety of sizes to fit your needs.",
+        "MaxBookingDurationInDays": 30,
         "PhotoUrls": [
           "photos/private-rooms-1.png",
           "photos/private-rooms-2.png",
@@ -48,6 +50,7 @@
       {
         "Name": "Meeting rooms",
         "Description": "Designed for productive meetings, workshops, or client presentations. Equipped with screens, whiteboards, and comfortable seating to keep your sessions running smoothly.",
+        "MaxBookingDurationInDays": 1,
         "PhotoUrls": [
           "photos/meeting-rooms-1.png",
           "photos/meeting-rooms-2.png",
