--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,6 +6,8 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    environment:
+      - ASPNETCORE_HTTP_PORTS=5000
     ports:
       - 5000:5000
       - 5001:5001
