--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,23 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    environment:
+      - ASPNETCORE_HTTP_PORTS=5000
     ports:
       - 5000:5000
       - 5001:5001
     depends_on:
       - postgres
+
+  frontend:
+    container_name: frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - 4200:4200
+    depends_on:
+      - backend
 
   postgres:
     image: postgres:17
