--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^24.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
