--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,5 +1,5 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy frontend
 
 on:
   # Runs on pushes targeting the default branch
@@ -51,7 +51,7 @@ jobs:
       - name: Build
         env:
           API_URL: ${{ vars.API_URL }}
-        run: npm run build --base-href=${{ vars.BASE_URL }}
+        run: npm run build --base-href="${{ vars.BASE_URL }}"
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
