--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -45,6 +45,9 @@ jobs:
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
+      - name: Install Angular CLI
+        run: npm i -g @angular/cli
+
       - name: Install dependencies
         run: npm ci
 
