--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -63,7 +63,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload dist folder
-          path: './frontend/dist'
+          path: './frontend/dist/desk-booking-application/browser'
 
       - name: Deploy to GitHub Pages
         id: deployment
